--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>WarsawJS Meetup: Slides template</title>
+    <title>Sztuczna Inteligencja z JavaScript</title>
 
     <meta charset="utf-8"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
@@ -17,10 +17,13 @@
     <!-- Prism.js -->
     <link rel="stylesheet" href="vendors/prism/prism.css"/>
     <link rel="stylesheet" href="vendors/prism/custom-prism.css"/>
+
+    <!-- Main styles -->
+    <link rel="stylesheet" href="styles/custom.css">
 </head>
 <body class="shower list">
     <header class="caption">
-        <h1>WarsawJS Meetup: Slides template</h1>
+        <h1>Sztuczna Inteligencja z JavaScript</h1>
         <p>We talk about JavaScript. Each month in Warsaw, Poland.</p>
     </header>
 
@@ -34,16 +37,16 @@
             <img src="images/my-avatar.jpg" alt="Speaker"/>
 
             <!-- 2. Speaker -->
-            <h2>Speaker name</h2>
+            <h2>Ulyana Plaksiy</h2>
 
             <!-- 3. Presentation title -->
-            <h2><strong>"WarsawJS Meetup: Slides template" [PL/EN]</strong></h2>
+            <h2><strong>"Sztuczna Inteligencja z JavaScript" [PL]</strong></h2>
 
             <!-- 4. Presentation date -->
-            <h2>2018-XX-XX</h2>
+            <h2>2020-02-12</h2>
 
             <!-- 5. Contact the speaker -->
-            <h2><a href="http://twitter.com/speaker">@speaker</a></h2>
+            <h2><a href="https://www.linkedin.com/in/ulyana-plaksiy-18922266/">ulyana-plaksiy</a></h2>
         </div>
     </section>
 
@@ -314,7 +317,7 @@
     <div class="progress"></div>
 
     <footer class="badge">
-        <a href="https://github.com/warsawjs/warsawjs-slides-template">Fork me on GitHub</a>
+        <a href="https://github.com/UlyJsi/warsawjs-meetup-presentation">Fork me on GitHub</a>
     </footer>
 
     <footer class="badge badge-top-left">
