--- a/index.html
+++ b/index.html
@@ -51,267 +51,110 @@
     </section>
 
     <section class="slide compact">
-        <h2>List Navigation</h2>
+        <h2>Agenda</h2>
         <ol>
-            <li>Ennui keffiyeh thundercats</li>
-            <li class="next">Jean shorts biodiesel</li>
-            <li class="next">Terry richardson, swag blog</li>
-            <li class="next">Locavore umami vegan helvetica</li>
-            <li class="next">Fingerstache kale chips</li>
-        </ol>
-        <p class="next">Before they sold out master</p>
-    </section>
-
-    <section class="slide compact">
-        <h2>Slide Header</h2>
-
-        <p>Echo Park 8-bit sustainable umami deep v Kickstarter. DIY cliche typewriter brunch, Odd Future sriracha pickled aesthetic. Farm-to-table bespoke fingerstache, kale chips umami brunch letterpress.</p>
-        <p>Whatever authentic disrupt, you probably haven't heard of them direct trade mlkshk Etsy. Gluten-free roof party plaid four loko quinoa.</p>
-        <p class="note">Echo Park 8-bit sustainable umami deep v Kickstarter.</p>
-    </section>
-
-    <section class="slide compact">
-        <h2>Inline Elements</h2>
-
-        <p>Retro meh brunch <a href="">aesthetic</a> Cosby sweater Shoreditch. Banksy Tumblr
-            <strong>sriracha</strong>, flexitarian pug chia master cleanse vinyl
-            <em>wayfarers</em> fanny pack bespoke Helvetica <b>roof</b> party. Messenger bag retro cred
-            <i>Portland</i> next level. Yr stumptown Schlitz Carles deep v small batch. Hella sustainable messenger bag,
-            <mark>leggings</mark>
-            skateboard literally<sup>1</sup> bicycle rights H<sub>2</sub>0 mumblecore banh mi DIY VHS. Semiotics four loko street art asymmetrical. Asymmetrical
-            <code>&lt;paleo&gt;</code> you probably haven’t heard of.
-        </p>
-
-        <footer class="footer">
-            <p>Retro meh brunch <a href="">aesthetic</a> Cosby sweater Shoreditch. Banksy Tumblr
-                <strong>sriracha</strong>, flexitarian pug chia master cleanse vinyl
-                <em>wayfarers</em> fanny pack bespoke Helvetica <b>roof</b> party. Messenger bag retro cred
-                <i>Portland</i> next level. Yr stumptown Schlitz Carles deep v small batch. Hella sustainable messenger bag,
-                <mark>leggings</mark>
-                skateboard literally<sup>1</sup> bicycle rights H<sub>2</sub>0 mumblecore banh mi DIY VHS. Semiotics four loko street art asymmetrical. Asymmetrical
-                <code>&lt;paleo&gt;</code> you probably haven’t heard of.
-            </p>
-        </footer>
-    </section>
-
-    <section class="slide compact">
-        <h2>Columns</h2>
-        <p class="double">Echo Park 8-bit sustainable umami deep v Kickstarter. DIY cliche typewriter brunch, Odd Future sriracha pickled aesthetic. Farm-to-table bespoke fingerstache, kale chips umami brunch American Apparel letterpress. Whatever authentic disrupt, you probably haven't heard of them direct trade mlkshk Etsy. Gluten-free roof party plaid American Apparel four loko quinoa. Echo Park 8-bit sustainable.</p>
-    </section>
-
-    <section class="slide">
-        <h2>Quotes</h2>
-        <blockquote>
-            <p>Flannel bicycle rights locavore selfies skateboard. Authentic fanny pack paleo four loko bespoke. Artisan tattooed chia XOXO ennui, lomo disrupt 8-bit art party Tumblr scenester.</p>
-        </blockquote>
-        <figure>
-            <blockquote>
-                <p>Post-ironic fashion axe flexitarian, Tonx narwhal messenger bag Tumblr. Portland gentrify deep v kale chips literally.</p>
-            </blockquote>
-            <figcaption>Yours Truly</figcaption>
-        </figure>
-    </section>
-
-    <section class="slide compact">
-        <h2>Nested Lists</h2>
-        <ol>
-            <li>Literally viral vegan, ugh drinking vinegar photo booth</li>
-            <li>Wes Anderson chillwave Marfa pour-over Etsy banh mi</li>
-            <li>Ethnic polaroid lo-fi iPhone ennui
-                <ul>
-                    <li>Yr wayfarers before they sold out Kickstarter asymmetrical</li>
-                    <li>Irony flexitarian readymade quinoa, kogi bespoke meggings narwhal</li>
-                    <li>Skateboard Etsy twee artisan Echo Park</li>
-                </ul>
-            </li>
-            <li>Tonx kitsch fingerstache readymade, retro single-origin coffee</li>
+            <li>Definicje</li>
+            <li class="next">Release log czyli jak powstała technologia Tensorflow.js</li>
+            <li class="next">Zalety i wady w używaniu</li>
+            <li class="next">Pokaż mi kod !</li>
+            <li class="next">Żródła</li>
         </ol>
     </section>
 
     <section class="slide compact">
-        <h2>Simple Table</h2>
-        <table>
-            <tr>
-                <th scope="col">Gentrify</th>
-                <th>Twee</th>
-                <th>Artisan</th>
-                <th>Banksy</th>
-            </tr>
-            <tr>
-                <th scope="row">Messenger</th>
-                <td>Mixtape</td>
-                <td>Small batch</td>
-                <td>Bicycle rights</td>
-            </tr>
-            <tr>
-                <th scope="row">Meggings</th>
-                <td>Freegan</td>
-                <td>Retro biodiesel</td>
-                <td>Slow-carb</td>
-            </tr>
-            <tr>
-                <th scope="row">Vegan</th>
-                <td>Occupy</td>
-                <td>Normcore</td>
-                <td>Put a bird on it</td>
-            </tr>
-            <tr>
-                <th scope="row">Next level</th>
-                <td>Selfies</td>
-                <td>Sustainable</td>
-                <td>Organic</td>
-            </tr>
-            <tr>
-                <th scope="row">Umami</th>
-                <td>Asymmetrical</td>
-                <td>Keytar</td>
-                <td>Craft beer</td>
-            </tr>
-            <tr>
-                <th scope="row">Biodiesel</th>
-                <td>Haven’t heard</td>
-                <td>Skateboard</td>
-                <td>Farm-to-table</td>
-            </tr>
-        </table>
+        <h2>Definicje</h2>
+        <p><strong>Machine Learning (ML, uczenie maszynowe)</strong> - zdolność komputerów do uczenia się bez programowania nowych umiejętności wprost (Arthur Samuel, 1959).</p>
+        <p><strong>ML model</strong> to wynik <i>(output)</i>, który jest generowany podczas trenowania algorytmów uczenia maszynowego <i>(np. Linear Regression, Decision Tree algorithm)</i> przy użyciu danych wejściowych <i>(input data)</i>.</p>
     </section>
 
     <section class="slide compact">
-        <h2>Striped Table</h2>
-        <table class="striped">
-            <tr>
-                <th scope="col">Gentrify</th>
-                <th>Twee</th>
-                <th>Artisan</th>
-                <th>Banksy</th>
-            </tr>
-            <tr>
-                <th scope="row">Messenger</th>
-                <td>Mixtape</td>
-                <td>Small batch</td>
-                <td>Bicycle rights</td>
-            </tr>
-            <tr>
-                <th scope="row">Meggings</th>
-                <td>Freegan</td>
-                <td>Retro biodiesel</td>
-                <td>Slow-carb</td>
-            </tr>
-            <tr>
-                <th scope="row">Vegan</th>
-                <td>Occupy</td>
-                <td>Normcore</td>
-                <td>Put a bird on it</td>
-            </tr>
-            <tr>
-                <th scope="row">Next level</th>
-                <td>Selfies</td>
-                <td>Sustainable</td>
-                <td>Organic</td>
-            </tr>
-            <tr>
-                <th scope="row">Umami</th>
-                <td>Asymmetrical</td>
-                <td>Keytar</td>
-                <td>Craft beer</td>
-            </tr>
-            <tr>
-                <th scope="row">Biodiesel</th>
-                <td>Haven’t heard</td>
-                <td>Skateboard</td>
-                <td>Farm-to-table</td>
-            </tr>
-        </table>
+        <h2>Definicje</h2>
+        <div class="models-ex-container">
+            <div>
+                <img class="models-img" src="images/classification.png" alt=""/>
+                <p class="no-margin">Czy społeczność WarsawJS podwoi się do końca 2020?</p>
+                <p>Czy Polska zdobędzie mistrzostwo w EURO 2020?</p>
+            </div>
+            <div>
+                <img class="models-img" src="images/regression.png" alt=""/>
+                <p class="no-margin">M-ny wzrost ilości osób w społeczności WarsawJS</p>
+                <p>Trend wzrostu cen mieszkań w Polsce w 2020</p>
+            </div>
+        </div>
     </section>
 
-    <section class="slide prism">
-        <h2>Listing Slide</h2>
-
-        <pre style="font-size: 45px;" class="language-javascript line-numbers">
+    <section class="slide compact">
+        <h2>Definicje</h2>
+        <p class="no-margin"><strong>Tensorflow.js</strong> to biblioteka do uczenia maszynowego w JavaScript, która pozwala twórzyć modele ML w JavaScript i używać je bezpośrednio w przeglądarce lub w środowisku Node.js.</p>
+        <pre style="font-size: 18px;" class="language-javascript">
             <code>
-                function wrap(value) {
-                    return function () {
-                        return value;
-                    }
-                }
+                import * as tf from '@tensorflow/tfjs';
+                const path = 'http://localhost:3000/models/mobilenet/model.json';
 
-                function bind(monad, f) {
-                    return f(monad());
+                onLoadModel = async () => {
+                    this.model = await tf.loadModel(path);
                 }
             </code>
         </pre>
     </section>
 
-    <section class="slide prism">
-        <pre style="font-size: 30px;" class="language-javascript line-numbers">
-            <code>
-                var monad = wrap('cookie');
-                bind(monad, (value) => {
-                    console.info(value);
-                    return wrap(value);
-                });
-                monad = bind(monad, (value) => {
-                    return wrap({ type: value });
-                });
-                bind(monad, (value) => {
-                    console.log(value);
-                    return wrap(value);
-                });
-            </code>
-        </pre>
+    <section class="slide">
+        <h2 class="shout grow">Release log czyli jak powstała technologia Tensorflow.js</h2>
+    </section>
+
+    <section class="slide compact">
+        <div class="release-log-img"></div>
     </section>
 
     <section class="slide">
-        <h2 class="shout"><a href="">Linked</a> Shout</h2>
+        <h2 class="shout grow">Zalety i wady w używaniu</h2>
+    </section>
+
+    <section class="slide compact">
+        <h2>Zalety</h2>
+        <ul>
+            <li class="next">wykorzystanie procesora graficznego po stronie klienta - lepsza wydajność</li>
+            <li class="next">importowanie oraz używanie gotowych ML modeli</li>
+            <li class="next">tworzenie, trenowanie oraw testowanie własnych ML modeli</li>
+            <li class="next">większa prywatność danych - brak przechowywania danych na serwerze</li>
+            <li class="next">testy po stronie klienta - brak requestów do Flask API</li>
+            <li class="next">szybki start dla początkujących - nie jest wymagana znajomość ekosystemu <br /> Scali / R / Pythona</li>
+        </ul>
+    </section>
+
+    <section class="slide compact pros">
+        <h2>Zalety</h2>
+        <img class="img" src="images/pros.png" alt="" />
+
+        <p class="note">Żródło: <a href="https://medium.com/@rangleio/bringing-artificial-intelligence-to-the-browser-with-tensorflow-js-b6b7458e3ec5">https://medium.com/@rangleio</a></p>
+    </section>
+
+    <section class="slide compact">
+        <h2>Wady</h2>
+        <ul>
+            <li class="next"><strong>ograniczenie danych</strong> - nie ma domyślnego dostępu do systemu plików w środowisku hosta przeglądarki. Ogranicza to dostępne zasoby danych i (może ograniczać) rozmiary plików</li>
+            <li class="next"><strong>problemy z wydajnością przy bardziej złozonych modelach</strong> - używanie Tensorflow.js z WebGL sprawia, że jest on znacznie wolniejszy niż np. Tensorflow w Pythonie z AVX. W przeglądarce proste modele można trenować znacznie szybciej, jednak większe modele będą trenować się znacznie dłużej</li>
+        </ul>
     </section>
 
     <section class="slide">
-        <h2 class="shout grow">Effect: Growing Shout</h2>
+        <h2 class="shout grow">Pokaż mi kod !</h2>
     </section>
 
     <section class="slide">
-        <h2 class="shout shrink">Effect: Shrinking Shout</h2>
+        <h2>Żródła</h2>
+        <ol>
+            <li><a href="https://www.tensorflow.org/js">Tensorflow.js</a></li>
+            <li><a href="https://www.tensorflow.org/js/models">Tensorflow.js - models</a></li>
+            <li><a href="https://learn.ml5js.org/docs/#/">ml5.js - Friendly Machine Learning for the Web</a></li>
+            <li><a href="https://becominghuman.ai/machine-learning-for-dummies-explained-in-2-mins-e83fbc55ac6d">Machine Learning for dummies — explained in 3 mins!</a></li>
+            <li><a href="https://www.statystyczny.pl/co-to-jest-machine-learning/">Co to jest „machine learning”?</a></li>
+            <li><a href="https://medium.com/@turalt/3-reasons-javascript-is-great-for-ai-88a52292daea">3 reasons JavaScript is great for AI</a></li>
+        </ol>
     </section>
 
-    <section class="slide">
-        <figure>
-            <img class="cover" src="vendors/shower-ribbon/pictures/exact.png" alt="">
-            <figcaption class="white">Copyright © 2016 <a href="">Yours Truly</a>, Famous Inc.</figcaption>
-        </figure>
-    </section>
-
-    <section class="slide">
-        <img class="cover" src="vendors/shower-ribbon/pictures/tall.png" alt="">
-    </section>
-
-    <section class="slide">
-        <img class="cover" src="vendors/shower-ribbon/pictures/wide.png" alt="">
-    </section>
-
-    <section class="slide white">
-        <img class="place top left" src="vendors/shower-ribbon/pictures/square.png" alt="">
-        <img class="place top" src="vendors/shower-ribbon/pictures/square.png" alt="">
-        <img class="place top right" src="vendors/shower-ribbon/pictures/square.png" alt="">
-
-        <img class="place left" src="vendors/shower-ribbon/pictures/square.png" alt="">
-        <img class="place" src="vendors/shower-ribbon/pictures/square.png" alt="">
-        <img class="place right" src="vendors/shower-ribbon/pictures/square.png" alt="">
-
-        <img class="place bottom left" src="vendors/shower-ribbon/pictures/square.png" alt="">
-        <img class="place bottom" src="vendors/shower-ribbon/pictures/square.png" alt="">
-        <img class="place bottom right" src="vendors/shower-ribbon/pictures/square.png" alt="">
-    </section>
-
-    <section class="slide" data-timing="00:03">
-        <h3 class="shout">Automatic switch slide after <strong>3 secs</strong> ...</h3>
-    </section>
-
-    <section class="slide">
-        <img class="cover" src="images/gifs/example-gif.gif" width="480" height="360" alt=""/>
-    </section>
-
-    <section class="slide">
-        <h3 class="shout">See you next month at WarsawJS</h3>
+    <section class="slide last">
+        <h2 class="shout grow">Thank you <span>&hearts;</span></h2>
     </section>
 
     <div class="progress"></div>
