add while story slide

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
     </section>
 
     <section class="slide compact">
+        <iframe src="https://giphy.com/embed/l0MYJS6MsImRGrzZ6" width="900" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+    </section>
+
+    <section class="slide compact">
         <h2>Agenda</h2>
         <ol>
             <li>Definicje</li>
