add link to repo

--- a/index.html
+++ b/index.html
@@ -154,11 +154,12 @@
             <li><a href="https://becominghuman.ai/machine-learning-for-dummies-explained-in-2-mins-e83fbc55ac6d">Machine Learning for dummies — explained in 3 mins!</a></li>
             <li><a href="https://www.statystyczny.pl/co-to-jest-machine-learning/">Co to jest „machine learning”?</a></li>
             <li><a href="https://medium.com/@turalt/3-reasons-javascript-is-great-for-ai-88a52292daea">3 reasons JavaScript is great for AI</a></li>
+            <li><a href="https://github.com/UlyJsi/tensorflowjs-react">Repozytorium omawianych przykładów</a></li>
         </ol>
     </section>
 
     <section class="slide last">
-        <h2 class="shout grow">Thank you <span>&hearts;</span></h2>
+        <h2 class="shout grow">Dziękuję <span>&hearts;</span></h2>
     </section>
 
     <div class="progress"></div>
